WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260867
REGRESSION(
267279@main
): [ macOS wk2 ] fast/canvas/webgl/texImage2D-mse-flipY-false.html is a consistent text failure.
https://bugs.webkit.org/show_bug.cgi?id=260867
Summary
REGRESSION(267279@main): [ macOS wk2 ] fast/canvas/webgl/texImage2D-mse-flipY...
Ben Schwartz
Reported
2023-08-29 11:11:41 PDT
fast/canvas/webgl/texImage2D-mse-flipY-false.html This test is a consistent text failure on macOS wk2 (including gpuprocess). HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fcanvas%2Fwebgl%2FtexImage2D-mse-flipY-false.html&platform=mac&flavor=wk2&flavor=gpuprocess
TEXT DIFF: Setting video src. Video can play. Checking the canvas pixels. -PASS: Bottom edge is red. -PASS: Top edge is blue. +FAIL: Bottom edge is not red. +FAIL: Top edge is not blue. DIFF URL:
https://build.webkit.org/results/Apple-Ventura-Release-AppleSilicon-WK2-Tests/267407%40main%20(4683)/fast/canvas/webgl/texImage2D-mse-flipY-false-pretty-diff.html
REPRODUCTION: I was able to reproduce this bug on macOS Ventura (13.5, 22G74/arm64) using the following command: run-webkit-tests --verbose --iterations 50 --clobber-old-results --exit-after-n-failures 1 fast/canvas/webgl/texImage2D-mse-flipY-false.html REGRESSION: I was able to bisect a regression point. This bug reproduced at
267279@main
, but it did not reproduce at
267278@main
. Changes at
267279@main
appear to be directly related to this error, and is likely what caused the failure.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-29 11:11:54 PDT
<
rdar://problem/114642707
>
EWS
Comment 2
2023-08-29 11:24:54 PDT
Test gardening commit
267412@main
(281b7e80b1ea): <
https://commits.webkit.org/267412@main
> Reviewed commits have been landed. Closing PR #17191 and removing active labels.
Ben Schwartz
Comment 3
2023-09-07 23:13:22 PDT
This text expectation was removed by mistake in
267723@main
(the issue has not yet been resolved -- see
rdar://problem/114642707
). Re-setting test expectation.
EWS
Comment 4
2023-09-07 23:22:25 PDT
Test gardening commit
267770@main
(b96a43544d41): <
https://commits.webkit.org/267770@main
> Reviewed commits have been landed. Closing PR #17578 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 5
2023-09-08 07:48:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17591
EWS
Comment 6
2023-09-08 16:30:01 PDT
Committed
267814@main
(324ba3da764b): <
https://commits.webkit.org/267814@main
> Reviewed commits have been landed. Closing PR #17591 and removing active labels.
Ben Schwartz
Comment 7
2024-05-31 20:09:59 PDT
This no longer appears to be occurring. Removing test expectations. Tracking test expectations removal in
bug #274990
(
rdar://129080660
).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug